@@ -1,5 +1,9 @@
 yoshimi 1.6.0 M
 
+2019-9-9 Will
+* ALSA can autoconnect to multiple MIDI inputs :)
+  Now uses a comma separated list.
+
 2019-9-8 Will
 * BugFix: Loading files failed with mxml V 3.1 :(
 * Set version as 1.6.0.1
